--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "ringoXD",
 	"license": "AGPL-3.0-only",
 	"dependencies": {
+		"@types/node": "^20.14.11",
 		"consola": "^3.2.3",
 		"picocolors": "^1.0.1",
 		"tsx": "^4.16.2",
